--- a/src/main/resources/com/project/app/fxml/contents/sparepart.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/sparepart.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="1000.0" prefWidth="1110.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.SparepartController">
    <children>
       <VBox layoutX="255.0" layoutY="156.0" prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -44,17 +43,17 @@
                <children>
                   <AnchorPane prefHeight="31.0" prefWidth="971.0">
                      <children>
-                        <AnchorPane layoutX="-6.0" prefHeight="36.0" prefWidth="640.0" style="-fx-background-color: white; -fx-background-radius: 8 8 8 8; -fx-border-color: #c8c8c8; -fx-border-radius: 8 8 8 8; -fx-border-width: 1 1 1 1;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="430.0" AnchorPane.topAnchor="0.0">
+                        <AnchorPane layoutX="-6.0" prefHeight="36.0" prefWidth="454.0" style="-fx-background-color: white; -fx-background-radius: 8 8 8 8; -fx-border-color: #c8c8c8; -fx-border-radius: 8 8 8 8; -fx-border-width: 1 1 1 1;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="616.0" AnchorPane.topAnchor="0.0">
                            <children>
                               <HBox alignment="CENTER_LEFT" layoutX="4.0" prefHeight="34.0" prefWidth="643.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="0.0">
                                  <children>
-                                    <TextField prefHeight="31.0" prefWidth="486.0" promptText="Search" style="-fx-background-radius: 8 0 0 8; -fx-background-color: transparent; -fx-border-color: white;">
+                                    <TextField fx:id="searchField" prefHeight="31.0" prefWidth="282.0" promptText="Search" style="-fx-background-radius: 8 0 0 8; -fx-background-color: transparent; -fx-border-color: white;">
                                        <font>
                                           <Font name="Georgia" size="15.0" />
                                        </font>
                                     </TextField>
-                                    <ComboBox prefHeight="26.0" prefWidth="108.0" promptText="Categories" style="-fx-background-color: white; -fx-border-color: #c8c8c8; -fx-border-width: 0 1 0 1 2;" />
-                                    <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="33.0" style="-fx-background-color: white; -fx-border-color: white;">
+                                    <ComboBox fx:id="categoryBox" prefHeight="26.0" prefWidth="153.0" promptText="Categories" style="-fx-background-color: white; -fx-border-color: #c8c8c8; -fx-border-width: 0 1 0 1 2;" />
+                                    <Button fx:id="btnSearch" mnemonicParsing="false" onAction="#goSearch" prefHeight="33.0" prefWidth="33.0" style="-fx-background-color: white; -fx-border-color: white;">
                                        <graphic>
                                           <ImageView fitHeight="23.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -67,12 +66,57 @@
                               </HBox>
                            </children>
                         </AnchorPane>
+                        <HBox alignment="TOP_RIGHT" layoutX="660.0" layoutY="-36.0" prefHeight="36.0" prefWidth="574.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <Button fx:id="btnAdd" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goAdd" prefHeight="36.0" prefWidth="141.0" text="Add Component">
+                                 <graphic>
+                                    <ImageView fitHeight="23.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../images/plus-penawaran.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <Button fx:id="btnUpdate" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goUpdate" prefHeight="36.0" prefWidth="156.0" text="Update Component">
+                                 <graphic>
+                                    <ImageView fitHeight="23.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../images/close-salesoverview.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <Button fx:id="btnDelete" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goDelete" prefHeight="36.0" prefWidth="156.0" text="Delete Component">
+                                 <graphic>
+                                    <ImageView fitHeight="23.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../images/close-salesoverview.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <Button fx:id="btnRefresh" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goRefresh" prefHeight="45.0" prefWidth="99.0" text="Refresh">
+                                 <graphic>
+                                    <ImageView fitHeight="23.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../images/refresh-manageaccount.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                           </children>
+                        </HBox>
                      </children>
                   </AnchorPane>
-                  <TableView prefHeight="823.0" prefWidth="1070.0">
+                  <TableView fx:id="tableKomponen" prefHeight="823.0" prefWidth="1070.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="Nama Mesin" />
-                      <TableColumn prefWidth="75.0" text="Spesifikasi Mesin" />
+                      <TableColumn fx:id="colID" minWidth="0.0" prefWidth="42.0" text="ID" />
+                      <TableColumn fx:id="colNamaKomponen" prefWidth="324.0" text="Nama Komponen" />
+                        <TableColumn fx:id="colSatuan" prefWidth="85.0" text="Satuan" />
+                        <TableColumn fx:id="colQty" prefWidth="59.0" text="Qty" />
+                        <TableColumn fx:id="colHALama" prefWidth="178.0" text="Harga Acuan Lama" />
+                        <TableColumn fx:id="colHABaru" prefWidth="186.0" text="Harga Acuan Baru" />
+                        <TableColumn fx:id="colTglBerlaku" prefWidth="174.0" text="Tanggal Berlaku" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
