--- a/src/main/resources/com/project/app/fxml/popup/createsuratpenawaram_popup.fxml
+++ b/src/main/resources/com/project/app/fxml/popup/createsuratpenawaram_popup.fxml
@@ -2,8 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -16,7 +18,7 @@
 <AnchorPane fx:id="popupRoot" prefHeight="1000.0" prefWidth="1400.0" style="-fx-background-color: rgba(0, 0, 0, 0.45);" stylesheets="@../../css/salesoverview_popup.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.ListPerusahaanPopupController">
 
     <children>
-        <VBox alignment="TOP_CENTER" layoutX="73.0" layoutY="170.0" prefHeight="504.0" prefWidth="1271.0" spacing="20.0" style="-fx-background-color: #f6f6f6; -fx-padding: 25; -fx-background-radius: 12;" AnchorPane.bottomAnchor="248.0" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="248.0">
+        <VBox alignment="TOP_CENTER" layoutX="73.0" layoutY="170.0" prefHeight="669.0" prefWidth="1272.0" spacing="20.0" style="-fx-background-color: #f6f6f6; -fx-padding: 25; -fx-background-radius: 12;" AnchorPane.bottomAnchor="165.0" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="165.0">
          <children>
             <HBox alignment="TOP_RIGHT" prefHeight="49.0" prefWidth="1202.0">
                <children>
@@ -27,7 +29,7 @@
                               <Image url="@../../images/company-listperusahaanpopup.png" />
                            </image>
                         </ImageView>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="List Perusahaan" wrappingWidth="330.0511169433594">
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Add Surat Penawaran" wrappingWidth="372.0511169433594">
                            <font>
                               <Font name="Georgia Bold" size="30.0" />
                            </font>
@@ -45,9 +47,9 @@
                   </Button>
                </children>
             </HBox>
-            <VBox prefHeight="385.0" prefWidth="1221.0" spacing="20.0">
+            <VBox prefHeight="547.0" prefWidth="1222.0" spacing="20.0">
                <children>
-                  <HBox prefHeight="320.0" prefWidth="1221.0" spacing="20.0">
+                  <HBox prefHeight="490.0" prefWidth="1222.0" spacing="20.0">
                      <children>
                         <AnchorPane prefHeight="320.0" prefWidth="414.0" style="-fx-background-color: white; -fx-background-radius: 15 15 15 15; -fx-border-color: gray; -fx-border-radius: 15 15 15 15;">
                            <children>
@@ -55,7 +57,7 @@
                                  <children>
                                     <HBox alignment="CENTER_LEFT" prefHeight="75.0" prefWidth="357.0" style="-fx-border-color: #c8c8c8; -fx-border-width: 0 0 1 0;">
                                        <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Tambah Perusahaan">
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Tambah Surat Baru">
                                              <font>
                                                 <Font name="Georgia" size="19.0" />
                                              </font>
@@ -69,7 +71,7 @@
                                        <children>
                                           <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="357.0" spacing="10.0">
                                              <children>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nama Perusahaan :" wrappingWidth="142.6826171875">
+                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="No. Surat Penawaran :" wrappingWidth="150.6826171875">
                                                    <font>
                                                       <Font name="Georgia" size="15.0" />
                                                    </font>
@@ -79,7 +81,7 @@
                                           </HBox>
                                           <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="357.0" spacing="10.0">
                                              <children>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Alamat Perusahaan :" wrappingWidth="142.7099609375">
+                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ID Perusahaan :" wrappingWidth="150.7099609375">
                                                    <font>
                                                       <Font name="Georgia" size="15.0" />
                                                    </font>
@@ -89,27 +91,24 @@
                                           </HBox>
                                           <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="357.0" spacing="10.0">
                                              <children>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="No.Telp Perusahaan :">
+                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Tanggal :" wrappingWidth="150.13525390625">
                                                    <font>
                                                       <Font name="Georgia" size="15.0" />
                                                    </font>
                                                 </Text>
-                                                <TextField prefHeight="31.0" prefWidth="220.0" />
+                                                <DatePicker prefHeight="32.0" prefWidth="228.0" />
                                              </children>
                                           </HBox>
-                                          <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="357.0" spacing="10.0">
+                                          <VBox prefHeight="180.0" prefWidth="376.0" spacing="10.0">
                                              <children>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email Perusahaan :" wrappingWidth="142.10400390625">
+                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Perihal :" wrappingWidth="142.10400390625">
                                                    <font>
                                                       <Font name="Georgia" size="15.0" />
                                                    </font>
                                                 </Text>
-                                                <TextField prefHeight="31.0" prefWidth="220.0" />
+                                                <TextArea prefHeight="200.0" prefWidth="200.0" />
                                              </children>
-                                             <VBox.margin>
-                                                <Insets bottom="10.0" />
-                                             </VBox.margin>
-                                          </HBox>
+                                          </VBox>
                                           <HBox alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="357.0">
                                              <children>
                                                 <Button graphicTextGap="10.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="83.0" style="-fx-background-color: black; -fx-background-radius: 5;" text="Add" textFill="WHITE">
@@ -131,10 +130,10 @@
                         </AnchorPane>
                         <TableView prefHeight="728.0" prefWidth="819.0">
                           <columns>
-                            <TableColumn prefWidth="75.0" text="Nama Perusahaan" />
-                            <TableColumn prefWidth="75.0" text="Alamat Perusahaan" />
-                              <TableColumn prefWidth="75.0" text="No.Telp Perusahaan" />
-                              <TableColumn prefWidth="75.0" text="Email Perusahaan" />
+                              <TableColumn prefWidth="98.0" text="ID Perusahaan" />
+                            <TableColumn prefWidth="300.0" text="Nama Perusahaan" />
+                              <TableColumn prefWidth="185.0" text="No.Telp Perusahaan" />
+                              <TableColumn prefWidth="212.0" text="Email Perusahaan" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
