--- a/src/main/resources/com/project/app/fxml/popup/createsuratpenawaran_popup.fxml
+++ b/src/main/resources/com/project/app/fxml/popup/createsuratpenawaran_popup.fxml
@@ -18,7 +18,7 @@
 <AnchorPane fx:id="popupRoot" prefHeight="1000.0" prefWidth="1400.0" style="-fx-background-color: rgba(0, 0, 0, 0.45);" stylesheets="@../../css/salesoverview_popup.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.ListPerusahaanPopupController">
 
     <children>
-        <VBox alignment="TOP_CENTER" layoutX="73.0" layoutY="170.0" prefHeight="669.0" prefWidth="1272.0" spacing="20.0" style="-fx-background-color: #f6f6f6; -fx-padding: 25; -fx-background-radius: 12;" AnchorPane.bottomAnchor="165.0" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="165.0">
+        <VBox alignment="TOP_CENTER" layoutX="67.0" layoutY="165.0" prefHeight="669.0" prefWidth="1272.0" spacing="20.0" style="-fx-background-color: #f6f6f6; -fx-padding: 25; -fx-background-radius: 12;" AnchorPane.bottomAnchor="165.0" AnchorPane.leftAnchor="67.0" AnchorPane.rightAnchor="61.0" AnchorPane.topAnchor="165.0">
          <children>
             <HBox alignment="TOP_RIGHT" prefHeight="49.0" prefWidth="1202.0">
                <children>
@@ -76,7 +76,7 @@
                                                       <Font name="Georgia" size="15.0" />
                                                    </font>
                                                 </Text>
-                                                <TextField prefHeight="31.0" prefWidth="220.0" />
+                                                <TextField prefHeight="31.0" prefWidth="239.0" />
                                              </children>
                                           </HBox>
                                           <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="357.0" spacing="10.0">
@@ -86,7 +86,7 @@
                                                       <Font name="Georgia" size="15.0" />
                                                    </font>
                                                 </Text>
-                                                <TextField prefHeight="31.0" prefWidth="220.0" />
+                                                <TextField prefHeight="31.0" prefWidth="239.0" />
                                              </children>
                                           </HBox>
                                           <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="357.0" spacing="10.0">
@@ -96,7 +96,7 @@
                                                       <Font name="Georgia" size="15.0" />
                                                    </font>
                                                 </Text>
-                                                <DatePicker prefHeight="32.0" prefWidth="228.0" />
+                                                <DatePicker prefHeight="32.0" prefWidth="241.0" />
                                              </children>
                                           </HBox>
                                           <VBox prefHeight="180.0" prefWidth="376.0" spacing="10.0">
@@ -128,17 +128,47 @@
 
                            </children>
                         </AnchorPane>
-                        <TableView prefHeight="728.0" prefWidth="819.0">
-                          <columns>
-                              <TableColumn prefWidth="98.0" text="ID Perusahaan" />
-                            <TableColumn prefWidth="300.0" text="Nama Perusahaan" />
-                              <TableColumn prefWidth="185.0" text="No.Telp Perusahaan" />
-                              <TableColumn prefWidth="212.0" text="Email Perusahaan" />
-                          </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
+                        <VBox spacing="10.0">
+                           <children>
+                              <AnchorPane prefHeight="32.0" prefWidth="789.0">
+                                 <children>
+                                    <AnchorPane prefHeight="35.0" prefWidth="440.0" style="-fx-background-color: white; -fx-background-radius: 8 8 8 8; -fx-border-color: #c8c8c8; -fx-border-radius: 8 8 8 8; -fx-border-width: 1 1 1 1;">
+                                       <children>
+                                          <HBox alignment="CENTER_LEFT" layoutX="7.0" prefHeight="33.0" prefWidth="423.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="2.0">
+                                             <children>
+                                                <TextField fx:id="searchField" prefHeight="31.0" prefWidth="398.0" promptText="Search" style="-fx-background-radius: 8 0 0 8; -fx-background-color: transparent; -fx-border-color: white;">
+                                                   <font>
+                                                      <Font name="Georgia" size="15.0" />
+                                                   </font>
+                                                </TextField>
+                                                <Button fx:id="btnSearch" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleSearch" prefHeight="25.0" prefWidth="35.0" style="-fx-background-color: white; -fx-border-color: white;">
+                                                   <graphic>
+                                                      <ImageView fitHeight="20.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../../images/search-sparepart.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                   </graphic>
+                                                </Button>
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </AnchorPane>
+                                 </children>
+                              </AnchorPane>
+                              <TableView prefHeight="442.0" prefWidth="790.0">
+                                <columns>
+                                    <TableColumn prefWidth="98.0" text="ID Perusahaan" />
+                                  <TableColumn prefWidth="300.0" text="Nama Perusahaan" />
+                                    <TableColumn prefWidth="185.0" text="No.Telp Perusahaan" />
+                                    <TableColumn prefWidth="212.0" text="Email Perusahaan" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                           </children>
+                        </VBox>
                      </children>
                   </HBox>
                   <HBox alignment="TOP_RIGHT" prefHeight="39.0" prefWidth="1221.0">
