--- a/src/main/resources/com/project/app/fxml/contents/addnewpenawaran.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/addnewpenawaran.fxml
@@ -98,7 +98,11 @@
                         </HBox>
                         <ScrollPane prefHeight="842.0" prefWidth="1070.0" style="-fx-border-width: 1 0 0 0; -fx-border-color: #c8c8c8; -fx-background-color: transparent;">
                           <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="797.0" prefWidth="1055.0" />
+                              <VBox fx:id="vboxDetail" spacing="10.0">
+                                  <padding>
+                                      <Insets top="20.0" right="20.0" bottom="20.0" left="20.0"/>
+                                  </padding>
+                              </VBox>
                           </content>
                         </ScrollPane>
                      </children>
