--- a/src/main/resources/com/project/app/fxml/contents/penawaran.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/penawaran.fxml
@@ -96,17 +96,15 @@
                               </Text>
                            </children>
                         </HBox>
-                         <ScrollPane fx:id="scrollSurat" fitToWidth="true" style="-fx-border-width: 1 0 0 0; -fx-border-color: #c8c8c8; -fx-background-color: transparent;">
-                             <content>
-                                 <VBox fx:id="vboxSuratContainer" spacing="15.0" >
-                                     <padding>
-                                         <Insets top="10" right="10" bottom="10" left="10"/>
-                                     </padding>
-                                 </VBox>
-                             </content>
-                         </ScrollPane>
-
-
+                        <ScrollPane prefHeight="842.0" prefWidth="1070.0" style="-fx-border-width: 1 0 0 0; -fx-border-color: #c8c8c8; -fx-background-color: transparent;">
+                            <content>
+                                <VBox fx:id="vboxSuratContainer" spacing="15.0">
+                                    <padding>
+                                        <Insets top="10" right="10" bottom="10" left="10"/>
+                                    </padding>
+                                </VBox>
+                            </content>
+                        </ScrollPane>
                      </children>
                   </VBox>
                </children>
