--- a/src/main/resources/com/project/app/fxml/contents/tagihan.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/tagihan.fxml
@@ -43,17 +43,17 @@
                <children>
                   <AnchorPane prefHeight="31.0" prefWidth="971.0">
                      <children>
-                        <AnchorPane layoutX="-6.0" prefHeight="36.0" prefWidth="640.0" style="-fx-background-color: white; -fx-background-radius: 8 8 8 8; -fx-border-color: #c8c8c8; -fx-border-radius: 8 8 8 8; -fx-border-width: 1 1 1 1;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="430.0" AnchorPane.topAnchor="0.0">
+                        <AnchorPane layoutX="-6.0" prefHeight="36.0" prefWidth="499.0" style="-fx-background-color: white; -fx-background-radius: 8 8 8 8; -fx-border-color: #c8c8c8; -fx-border-radius: 8 8 8 8; -fx-border-width: 1 1 1 1;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="566.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <HBox alignment="CENTER_LEFT" layoutX="4.0" prefHeight="34.0" prefWidth="643.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="0.0">
+                              <HBox alignment="CENTER_LEFT" layoutX="6.0" prefHeight="34.0" prefWidth="499.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0">
                                  <children>
-                                    <TextField prefHeight="31.0" prefWidth="486.0" promptText="Search" style="-fx-background-radius: 8 0 0 8; -fx-background-color: transparent; -fx-border-color: white;">
+                                    <TextField fx:id="searchField" prefHeight="31.0" prefWidth="369.0" promptText="Search" style="-fx-background-radius: 8 0 0 8; -fx-background-color: transparent; -fx-border-color: white;">
                                        <font>
                                           <Font name="Georgia" size="15.0" />
                                        </font>
                                     </TextField>
-                                    <ComboBox prefHeight="26.0" prefWidth="108.0" promptText="Categories" style="-fx-background-color: white; -fx-border-color: #c8c8c8; -fx-border-width: 0 1 0 1 2;" />
-                                    <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="33.0" style="-fx-background-color: white; -fx-border-color: white;">
+                                    <ComboBox fx:id="categoryBox" prefHeight="26.0" prefWidth="132.0" promptText="Categories" style="-fx-background-color: white; -fx-border-color: #c8c8c8; -fx-border-width: 0 1 0 1 2;" />
+                                    <Button fx:id="btnSearch" mnemonicParsing="false" onAction="#onSearch" prefHeight="33.0" prefWidth="33.0" style="-fx-background-color: white; -fx-border-color: white;">
                                        <graphic>
                                           <ImageView fitHeight="23.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -66,16 +66,47 @@
                               </HBox>
                            </children>
                         </AnchorPane>
+                        <HBox alignment="TOP_RIGHT" layoutX="571.0" layoutY="-36.0" prefHeight="36.0" prefWidth="499.0" spacing="10.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="571.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
+                           <children>
+                              <Button fx:id="btnAdd" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goAdd" prefHeight="44.0" prefWidth="105.0" text="Add">
+                                 <graphic>
+                                    <ImageView fitHeight="24.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../images/plus-penawaran.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <Button fx:id="btnUpdate" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goUpdate" prefHeight="44.0" prefWidth="105.0" text="Update">
+                                 <graphic>
+                                    <ImageView fitHeight="24.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../images/update.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <Button fx:id="btnRefresh" graphicTextGap="10.0" mnemonicParsing="false" onAction="#onRefresh" prefHeight="44.0" prefWidth="105.0" text="Refresh">
+                                 <graphic>
+                                    <ImageView fitHeight="24.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../images/refresh-manageaccount.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                           </children>
+                        </HBox>
                      </children>
                   </AnchorPane>
-                  <TableView prefHeight="823.0" prefWidth="1070.0">
+                  <TableView fx:id="tableTagihan" prefHeight="823.0" prefWidth="1070.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="No.Tagihan" />
-                      <TableColumn prefWidth="75.0" text="No.Surat" />
-                        <TableColumn prefWidth="75.0" text="Perusahaan" />
-                        <TableColumn prefWidth="75.0" text="Tanggal" />
-                        <TableColumn prefWidth="75.0" text="Total" />
-                        <TableColumn prefWidth="75.0" text="Status" />
+                      <TableColumn fx:id="colNoTag" prefWidth="75.0" text="No.Tagihan" />
+                      <TableColumn fx:id="colNoSP" prefWidth="75.0" text="No.Surat" />
+                        <TableColumn fx:id="colPerusahaan" prefWidth="75.0" text="Perusahaan" />
+                        <TableColumn fx:id="colTanggal" prefWidth="75.0" text="Tenggat Pembayaran" />
+                        <TableColumn fx:id="colTotal" prefWidth="75.0" text="Total" />
+                        <TableColumn fx:id="colStatus" prefWidth="75.0" text="Status" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
